2005-10-09 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-structure.c: added preservation of aspect ratio to SVG elements

2005-10-08  Carl Worth  <cworth@cworth.org>

	* rsvg-cairo-draw.c: (_set_source_rsvg_pattern): Add preliminary
	support for patterns to rsvg-cairo, (doesn't do transformed
	patterns yet).

	* rsvg-cairo-draw.c:
	(_set_source_rsvg_paint_server), (rsvg_cairo_render_path): Pass
	the RsvgDrawingCtx down do the sub-functions since the pattern
	drawing code needs it in order to call _rsvg_node_draw_children.

2005-10-08  Carl Worth  <cworth@cworth.org>

	* Makefile.am: Add apparently missing POPT_LIBS flags to
	librsvg_2_cairo_la_LIBADD.

2005-10-08  Carl Worth  <cworth@cworth.org>

	* rsvg-base.c: (rsvg_entity_decl): Add some more casts to let gcc4
	compile once again without errors.

2005-10-08  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cond.c: Fix up <switch> conditional comparisons
	* rsvg-base.c: Make XML entities work, thus passing a few more conformance tests. Needs libxml2 2.6.22 or better.
	Disable entities otherwise.
	
2005-10-08 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-cairo-clip.c/.h: new files. Added clipping in cairo backend.
	* rsvg-cairo-draw.c: stopped paths from being drawn and not stroked or filled (root of the "grey box" problem)

	
2005-10-08 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-art-paint-server.c: stopped strangely transformed gradients from getting flipped.

2005-10-07  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Hopefully get rid of "static" when rendering using the cairo backend
	
2005-10-07 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-cairo-draw.c: made opacity work
	* test-display.c: changed set_default_dpi_x_y to set_default_dpi
	* rsvg-cairo-draw.c: put image in the right spot
	
2005-10-06  Dom Lachowicz <cinamod@hotmail.com>

	* autogen.sh: Let librsvg build out of srcdir. Bug #158331
	* test-display.c: Populate save dialogs with the SVG's name. Bug #318010.